Maverick Synergy 3.0.0-RC2 - TBC

Bug Fixes
    o Fixed implicit narrowing of long to int from code scan warning. 
    o SshServer required a method to be able to set the default Security Level.
    
=================
=  HISTORY      =
=================

Maverick Synergy 3.0.0-RC1 - Dec 27, 2020

Features
    o Major refactor to support more shared code with the Maverick Legacy APIs.
    o Removed all dependencies from core maverick-synergy-client and maverick-synergy-server modules to enable clearer choice on third-party dependencies.
    o CBC ciphers have been deprecated. You can enable CBC ciphers by calling ComponentManager.enableCBCCiphers();
    o DSA keys have been deprecated. We will no longer generate them, but you can enable support for using them if remote server requires them with ComponentManager.getInstance().enableAlgorithm("ssh-dss");
    o SftpSubsystem will now detect SftpOperationWrapper interface on installed AbstractFileFactory implementation.
    o Added event listener registration to SshConnection interface.
    
Bug Fixes
    o Selector threads and executor service threads have now been marked as daemon threads.
    
------------------

Maverick NG 2.0.5 - Jun 20, 2019

Bug Fixes
    o Ensure selector key is cancelled when forwarding socket error occurs.
    
-----------------

Maverick NG 2.0.4 - Mar 14, 2019

Features
    o Removed SLF4J dependency in favor of internal logging interface with support for console, file and connection based logging.
    o Added support for curve25519-sha256@libssh.org, rsa1024-sha1 and rsa2048-sha256 key exchanges.
    o Added key exchange unit tests.
    
Bug Fixes
    o Consume error when performing pending operations on selector to ensure other operations do not fail.
    o Changed default message sent to remote when a disconnection occurs because of an error.
    o changePositionofAlgorithm throws IndexOutOfBoundsException when presented with an algorithm that is not in the list*