@@ -3,7 +3,8 @@ Maverick Synergy 3.0.0-RC2 - TBC
 Bug Fixes
     o Fixed implicit narrowing of long to int from code scan warning. 
     o SshServer required a method to be able to set the default Security Level.
-    
+    o Made ByteArrayReader more resilient to length errors when processing messages.
+     
 =================
 =  HISTORY      =
 =================
